--- a/index.html
+++ b/index.html
@@ -67,25 +67,25 @@
                     <div class="nav_menu">
                         <ul>
                             <li>
-                                <a href="#">Направления</a>
+                                <a href="#directions">Направления</a>
                             </li>
                             <li>
-                                <a href="#">Тренеры</a>
+                                <a href="#treners">Тренеры</a>
                             </li>
                             <li>
                                 <a href="#">Расписание</a>
                             </li>
                             <li>
-                                <a href="#">Прайс</a>
+                                <a href="#price_block">Прайс</a>
                             </li>
                             <li>
-                                <a href="#">Отзывы</a>
+                                <a href="#reviews">Отзывы</a>
                             </li>
                             <li>
-                                <a href="#">Локация</a>
+                                <a href="#contacts">Локация</a>
                             </li>
                             <li>
-                                <a href="#">Контакты</a>
+                                <a href="#contacts">Контакты</a>
                             </li>
                         </ul>
                     </div>
@@ -147,25 +147,25 @@
 
                                 <ul>
                                     <li>
-                                        <a href="#">Направления</a>
+                                        <a href="#directions">Направления</a>
                                     </li>
                                     <li>
-                                        <a href="#">Тренеры</a>
+                                        <a href="#treners">Тренеры</a>
                                     </li>
                                     <li>
                                         <a href="#">Расписание</a>
                                     </li>
                                     <li>
-                                        <a href="#">Прайс</a>
+                                        <a href="#price_block">Прайс</a>
                                     </li>
                                     <li>
-                                        <a href="#">Отзывы</a>
+                                        <a href="#reviews">Отзывы</a>
                                     </li>
                                     <li>
-                                        <a href="#">Локация</a>
+                                        <a href="#contacts">Локация</a>
                                     </li>
                                     <li>
-                                        <a href="#">Контакты</a>
+                                        <a href="#contacts">Контакты</a>
                                     </li>
                                     <li>
                                       
@@ -176,6 +176,7 @@
                                        
                                         <a href="tel:+79210990705">+7 (921) 099-07-05</a>
                                     </li>
+
                                     <li class="social_links_burger">
                                         <a href="#">
                                             <svg width="100%"  viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -941,7 +942,7 @@
 
 
 
-        <section class="directions">
+        <section class="directions" id="directions">
             <div class="container">
                 <div class="directions_wraper">
                     <h2>направления</h2>
@@ -1003,7 +1004,7 @@
         </section>
 
 
-        <section class="treners">
+        <section class="treners" id="treners">
 
             <div class="treners_wrapper">
                 <h2>Тренеры</h2>
@@ -1260,7 +1261,7 @@
 
 
 
-        <section class="price_block">
+        <section class="price_block" id="price_block">
             <div class="container">
 
 
@@ -1396,7 +1397,7 @@
         </section>
 
 
-        <section class="reviews">
+        <section class="reviews" id="reviews">
             <div class="reviews_wrapper">
                 <h2>Отзывы</h2>
 
@@ -1876,7 +1877,7 @@
             </div>
         </section>
 
-        <section class="reviews reviews_mobile">
+        <section class="reviews reviews_mobile" id="reviews">
             <div class="reviews_wrapper">
                 <h2>Отзывы</h2>
 
@@ -2392,7 +2393,7 @@
                                 <span class="txt">Позвоните мне по телефону</span>
                             </label>
 
-                            <label class="check_perens">
+                            <label class="check_perens send_whatsapp">
                                 <input type="checkbox" class="check">
                                 <span class="fake">
                                     <svg width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -2436,7 +2437,7 @@
     </main>
 
     <footer > 
-        <section class="contacts">
+        <section class="contacts" id="contacts">
             <div class="contacts_wrapper">
                 <div class="txt">
                     <h4>Контакты</h4>
@@ -2486,7 +2487,7 @@
 
                 </div>
 
-                <div class="map">
+                <div class="map" >
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1999.5049307078787!2d30.35766541609635!3d59.92376328187076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469631b0e6a0ff13%3A0xa927bec698d2174b!2z0JvQuNCz0L7QstGB0LrQuNC5INC_0YAuLCA1NtCTLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTEwNDA!5e0!3m2!1sru!2sua!4v1621541771408!5m2!1sru!2sua" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
