--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
                 <div class="navigatin_wrapper">
                     <div class="logo">
-                        <img src="img/nav/logo.png" alt="">
+                        <img src="img/nav/logo2.png" alt="">
                     </div>
 
                     <div class="nav_menu">
