--- a/index.html
+++ b/index.html
@@ -2830,7 +2830,7 @@
 
                         <div class="checkbox_block">
 
-                            <label class="check_perens">
+                            <label class="check_perens send_phone">
                                 <input type="checkbox" class="check" >
                                 <span class="fake">
                                     <svg width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
