--- a/index.html
+++ b/index.html
@@ -1406,7 +1406,8 @@
                             <img src="img/directions/crossfit.jpg" alt="">
 
                             <div class="txt">
-                                <h3>CROSSFIT</h3>
+                                <h3>CROSSFIT</h3> 
+                                <span>Нажмите, чтобы узнать подробнее</span>
                             </div>
                         </div>
 
@@ -1415,6 +1416,7 @@
 
                             <div class="txt">
                                 <h3>STRETCHING</h3>
+                                <span>Нажмите, чтобы узнать подробнее</span>
                             </div>
                         </div>
 
@@ -1423,6 +1425,7 @@
 
                             <div class="txt">
                                 <h3>ПРЕСС + ЯГОДИЦЫ</h3>
+                                <span>Нажмите, чтобы узнать подробнее</span>
                             </div>
                         </div>
 
@@ -1431,6 +1434,7 @@
 
                             <div class="txt">
                                 <h3>BOXING</h3>
+                                <span>Нажмите, чтобы узнать подробнее</span>
                             </div>
                         </div>
 
@@ -1439,6 +1443,7 @@
 
                             <div class="txt">
                                 <h3>AIR STRETCHING</h3>
+                                <span>Нажмите, чтобы узнать подробнее</span>
                             </div>
                         </div>
 
@@ -1447,6 +1452,7 @@
 
                             <div class="txt">
                                 <h3>BARRE</h3>
+                                <span>Нажмите, чтобы узнать подробнее</span>
                             </div>
                         </div>
 
